# Sorex

./: .clang-format  .cppcheck-supressions  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  README.md
.github/: CODEOWNERS
.github/workflows/: code-format.yml  cppcheck.yaml  unit-tests.yml
CMake/: BuildTools.cmake  TargetPlatform.cmake
Engine/: CMakeLists.txt
Engine/Include/Sorex/: Assert.h  CoreMinimal.h  Platform.h  RuntimeClass.h  Types.h
Engine/Include/Sorex/Containers/: ObjectContainer.h
Engine/Source/: RuntimeClass.cpp
Engine/Tests/: CMakeLists.txt
Engine/Tests/Units/: Test_ObjectContainer.cpp  Test_RuntimeClass.cpp
Extras/Cppcheck/: Cppcheck.sh
Precompiled/: Precompiled.h
Sandbox/: CMakeLists.txt  Main.cpp
